<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:divider="?android:attr/dividerHorizontal"
    android:dividerPadding="0dp"
    android:minHeight="48dp"
    android:orientation="vertical"
    android:showDividers="beginning"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/editUsername"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editUsername"
        android:textAppearance="?android:textAppearanceSmall"
        android:imeOptions="actionNext"
        android:hint="@string/hintEditKnownUser"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/editUrl"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editKnownHost"
        android:textAppearance="?android:textAppearanceSmall"
        android:imeOptions="actionNext"
        android:inputType="textUri"
        android:hint="@string/hintEditKnownHost"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/editApiKey"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:imeOptions="actionDone"
        android:id="@+id/editKnownApi"
        android:hint="@string/hintEditKnownApi"/>
</LinearLayout>